crates/toride-mise/tests/snapshots/fixtures__env_basic.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: env
---
{
    "NODE_VERSION": "22.0.0",
    "PATH": "/home/user/.local/share/mise/installs/node/22.0.0/bin",
}
