crates/toride-mise/tests/snapshots/fixtures__env_basic_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
{
  "NODE_VERSION": "22.0.0",
  "PATH": "/home/user/.local/share/mise/installs/node/22.0.0/bin"
}
