crates/toride-mise/tests/snapshots/fixtures__env_extended_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  {
    "name": "PATH",
    "source": "mise",
    "tool": "node@22",
    "value": "/path"
  }
]
