crates/toride-mise/tests/snapshots/fixtures__ls_installed_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  {
    "active": true,
    "install_path": "/home/user/.local/share/mise/installs/node/22.0.0",
    "name": "node",
    "source": {
      "path": ".mise.toml",
      "requested": "22"
    },
    "version": "22.0.0"
  }
]
