crates/toride-mise/tests/snapshots/fixtures__ls_missing_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  {
    "active": false,
    "install_path": null,
    "name": "python",
    "source": null,
    "version": null
  }
]
