crates/toride-mise/tests/snapshots/fixtures__ls_remote_github_cli.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: versions
---
[
    "2.42.1",
    "2.42.0",
]
