crates/toride-mise/tests/snapshots/fixtures__ls_remote_node.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: versions
---
[
    "22.0.0",
    "22.0.1",
    "21.0.0",
]
