crates/toride-mise/tests/snapshots/fixtures__ls_remote_node_json.snap
---
source: crates/toride-mise/tests/fixtures.rs
expression: pretty
---
[
  "22.0.0",
  "22.0.1",
  "21.0.0"
]
